# Read-My-Emails

./: .gitignore  README.md  commit_changes.diff  pyproject.toml
.github/workflows/: test.yml
examples/: fetch_tldr_emails.py  search_emails.py  use_TLDR_content_parser.py
examples/data/: email_1_test.txt  email_2_test.txt
src/: logging_config.py
src/api/: main.py
src/api/core/: config.py  errors.py
src/api/models/: emails.py
src/api/routers/: emails.py
src/api/services/: email_service.py
src/emails/: auth.py  content_parser.py  email_fetcher.py  email_indexer.py  email_searcher.py
src/emails/parsers/: content_parser_interface.py  tldr_content_parser.py
tests/: test_content_parser.py
tests/data/: articles_1.json  articles_2.json
