[tool.poetry]
name = "read-my-emails"
version = "0.1.0"
description = "Advanced RAG with Agents to help you read your emails"
authors = ["ugm2 <unaigaraymaestre@gmail.com>"]
readme = "README.md"
packages = [
    { include = "emails", from = "src" },
    { include = "api", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
google-auth-oauthlib = "^1.2.1"
google-api-python-client = "^2.149.0"
rich = "^13.9.3"
pytest = "^8.3.3"
langchain-community = "^0.3.5"
faiss-cpu = "^1.9.0"
langchain-ollama = "^0.2.0"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = ">=2.0.0"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
